fixed spacing pic descriptions for medium and small and the .bar spacing

--- a/exhibit.css
+++ b/exhibit.css
@@ -54,13 +54,13 @@ a {
 }
 
 .sub-heading {
-    line-height: 0;
+    line-height: 0.4;
     font-size: 25px;
 }
 
 .bar {
 /*    transparent for full window*/
-    opacity: 0;
+    display: none;
 }
 
 #h1 {
@@ -217,10 +217,10 @@ h5 {
         opacity: 0;
     }
     .one-line {
-        opacity: 0;
+        display: none;
     }
     .second-line {
-        opacity: 0;
+        display: none;
     }
 }
 
@@ -312,13 +312,19 @@ h5 {
     }
 
     .one-line {
-        opacity: 1;
+        display: block;
+        display: initial;
     }
     .second-line {
-        opacity: 1;
+        display: block;
+        display: initial;
     }
     .double-line {
-        opacity: 0;
+        display: none;
+    }
+    .bar {
+        display: block;
+        display: initial;
     }
 
 }
